# ceres

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODOS.md  docker-compose.yml  pyproject.toml
.superpowers/brainstorm/41084-1775212714/: .server-stopped  actionable-alerts.html  all-pages-audit.html  dashboard-philosophy.html  design-summary.html  full-mockup.html  layout-approach.html  pain-priorities.html  waiting-2.html
config/: config.yaml
dashboard/: Dockerfile  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
database/: schema.sql  seed_banks.sql
database/migrations/: 001_add_status_note.sql  002_add_job_id_to_agent_runs.sql
docs/: SETUP.md  full-test-scenarios.md
docs/plans/: REFACTORING_PLAN.md
scripts/: seed_banks.py  setup_database.py
src/ceres/: config.py  database.py  main.py  models.py  pubsub.py  queue.py  verification.py
tests/: conftest.py  test_agent_base.py  test_api.py  test_api_filters.py  test_api_rates.py  test_api_rebuild_all.py  test_api_routes.py  test_api_tasks.py  test_api_websocket.py  test_browser.py  test_cli.py  test_config.py  test_crawler.py  test_database.py  test_eng_review_fixes.py  test_extractors.py  test_integration.py  test_lab.py  test_learning.py  test_llm_extractor.py  test_models.py  test_normalizer.py  test_parser.py  test_pipeline_health.py  test_proxy_captcha.py  test_pubsub.py  test_queue.py  test_rate_limiter.py  test_scout.py  test_strategist.py  test_strategist_force.py  test_verification.py
(+80 files in other folders)
