[project]
name = "ceres"
version = "0.1.0"
description = "Indonesian bank loan programs crawler"
authors = [
    {name = "Edward"}
]
requires-python = "^3.11"
dependencies = [
    "asyncpg (>=0.31.0,<0.32.0)",
    "playwright (>=1.58.0,<2.0.0)",
    "anthropic (>=0.87.0,<0.88.0)",
    "click (>=8.3.1,<9.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "cssselect (>=1.4.0,<2.0.0)",
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "websockets (>=16.0,<17.0)",
    "openai (>=2.30.0,<3.0.0)",
    "openpyxl (>=3.1.0,<4.0.0)"
]

[project.scripts]
ceres = "ceres.main:cli"

[tool.poetry]
packages = [{include = "ceres", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
